k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sorteio
  namespace: dis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sorteio
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: sorteio
    spec:
      containers:
        - image: harbor-test.homologacao.tjrn.jus.br/sorteio/sorteio:04
          imagePullPolicy: Always
          name: sorteio
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 64Mi
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sed -i "s/PODNAME/$(hostname)/g" /app/templates/index.html
      imagePullSecrets:
        - name: harbor-regcred
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
