k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorteio
  namespace: dis
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: sorteio
  sessionAffinity: None
  type: ClusterIP
