k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sorteio
  namespace: dis
spec:
  ingressClassName: haproxy
  rules:
    - host: sorteio.rancher-hml.intrajus.tjrn
      http:
        paths:
          - backend:
              service:
                name: sorteio
                port:
                  number: 8080
            path: /
            pathType: Prefix
